0027894: Crash when calling ShapeUpgrade_UnifySameDomain

- Avoid getting pcurve of edge on not connected face.
- Avoid building wire of empty set of edges.

Small correction of test case for issue CR27894